[package]
name = "carapace"
version = "0.0.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "A code runner for online judge"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.60"
rlimit = "0.3.0"
syscallz = { git = "https://github.com/Nugine/syscallz-rs.git", rev = "a4de572"}
structopt = "0.2.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "carapace"
path = "src/bin/cli.rs"

[[bin]]
name = "runalg"
path = "src/bin/runalg.rs"