[package]
name = "carapace"
version = "0.1.0"
authors = ["Nugine <Nugine@163.com>"]
edition = "2018"

[dependencies]
aligned-utils = "1.0.2"
anyhow = "1.0.38"
dotenv = "0.15.0"
libc = "0.2.88"
memchr = "2.3.4"
nix = "0.20.0"
once_cell = "1.7.2"
path-absolutize = "3.0.6"
rand = "0.8.3"
rlimit = "0.5.4"
scopeguard = "1.1.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
tokio = { version = "1.2.0", default-features = false, features = ["time", "macros", "rt", "rt-multi-thread"]}
tracing = "0.1.25"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.16"
